# Crynn

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test_navigation_fix.md  vite.config.ts
Crynn/Crynn.xcodeproj/: project.pbxproj
Crynn/Crynn.xcodeproj/project.xcworkspace/xcuserdata/cricky.xcuserdatad/: UserInterfaceState.xcuserstate
Crynn/Crynn.xcodeproj/xcuserdata/cricky.xcuserdatad/xcschemes/: xcschememanagement.plist
Crynn/Crynn/Core/Diagnostics/: PerformanceTracer.swift
Crynn/Crynn/Core/Models/: SettingsStore.swift
Crynn/Crynn/Core/Persistence/: SessionManager.swift
Crynn/Crynn/Crynn.xcdatamodeld/: .xccurrentversion
Crynn/Crynn/Engine/Web/: WebViewContainer.swift
Crynn/Crynn/Features/QuickSwitch/: QuickSwitchView.swift
Crynn/Crynn/UI/Components/: Omnibox.swift  SidebarTabs.swift  SiteBlockerToggle.swift
Crynn/Crynn/UI/Windows/: BrowserWindow.swift  UnifiedTitleBar.swift
Crynn/CrynnTests/: CrynnTests.swift
Crynn/CrynnUITests/: CrynnUITests.swift  CrynnUITestsLaunchTests.swift
crates/common/: Cargo.toml
crates/email/: Cargo.toml
crates/email/src/: auth.rs  cache.rs  lib.rs  providers.rs
crates/engine_bridge/: Cargo.toml
crates/engine_bridge/src/: lib.rs
crates/gecko_ffi/: Cargo.toml  build.rs
crates/gecko_ffi/include/: gecko_wrapper.h
crates/gecko_ffi/src/: gecko_wrapper.cpp  lib.rs
crates/memory_profiler/: Cargo.toml
crates/memory_profiler/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  security.rs
crates/shell/: Cargo.toml
crates/shell/src/: browser.rs  email.rs  main.rs  memory.rs  url_utils.rs  vpn.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/vpn/: Cargo.toml
crates/vpn/src/: config.rs  lib.rs  providers.rs
macos/: README.md
macos/App/: CrynnApp.swift
macos/Core/Diagnostics/: PerformanceTracer.swift
macos/Core/Models/: NavigationState.swift  TabModel.swift
macos/Engine/Web/: ReaderSimplifier.swift  WebContext.swift  WebViewContainer.swift
macos/Privacy/: ContentBlocker.swift
macos/UI/Components/: Omnibox.swift
macos/UI/Windows/: SettingsView.swift
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bidi.rs  config.rs  downloads.rs  main.rs
src/components/: AddressBar.tsx  DownloadsPanel.tsx  EssentialsPage.tsx  VerticalTabs.tsx
src/components/Settings/: KeybindingSettings.tsx  PrivacySettings.tsx  ThemeSettings.tsx
src/lib/: i18n.ts  shortcuts.ts  theme.ts
src/pages/: SettingsPage.tsx
src/stores/: bookmarksStore.ts  downloadsStore.ts  historyStore.ts  settingsStore.ts  tabsStore.ts
src/styles/: global.css  tokens.css
