[package]
name = "crynn-network"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
url = "2.5"
rustls = "0.23"
rustls-pemfile = "1.0"
