[package]
name = "crynn-shell"
version = "0.0.1"
edition = "2021"

[dependencies]
egui = "0.27"
eframe = "0.27"  # egui framework for easy window management
webbrowser = "0.8"  # for opening web pages
url = "2.5"  # for URL parsing
reqwest = { version = "0.11", features = ["json"] }  # for HTTP requests
tokio = { version = "1.0", features = ["full"] }  # async runtime